add google analytics

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -73,5 +73,7 @@
 
 {% include _scripts.html %}
 {% include _statcounter-code.html %}
+{% include _google-analytics-code.html %}
+
 </body>
 </html>
