--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -55,6 +55,7 @@
 
 {% include _scripts.html %}
 {% include _statcounter-code.html %}
+{% include _google-analytics-code.html %}
 
 </body>
 </html>
