--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -61,6 +61,7 @@
 
 {% include _scripts.html %}
 {% include _statcounter-code.html %}
+{% include _google-analytics-code.html %}
 
 </body>
 </html>
